Admin side Question and Tutors Started

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "stevebauman/location": "^2.0"
+        "stevebauman/location": "^2.0",
+        "kim/activity": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
