--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cartalyst/stripe-laravel": "^6.0",
         "intervention/image": "^2.4",
         "kim/activity": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "stevebauman/location": "^2.0"
-        
+        "stevebauman/location": "^2.0",
+        "stripe/stripe-php": "5.*",
+        "anouar/paypalpayment": ">=3.0"      
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
